k8s_ingress_rules_does_not_restrict_sources/service_does_not_restrict_ingress_sources_default_backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: test
      port:
        number: 80
# Modified [service_does_not_restrict_ingress_sources_default_backend.yml] on [2021-02-11 15:32:16.741212]
