k8s_ingress_rules_does_not_restrict_sources/service_does_not_restrict_ingress_sources_missing_rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress-no-third-host
spec:
  name: foo
